desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
/* ... */
.trough:insensitive:active {
    background-color: @theme_insensitive_bg;
}

.progressbar {
    background-color: @theme_highlight_color;
    border-width: 1px;
    border-color: @theme_highlight_border;
    border-radius: 3px;
    border-style: solid;
}

/***************
 * Spinbuttons *
 ***************/
.spinbutton .button {
    padding: 2px 6px;
    color: @theme_active_color;

    border-width: 1px;
    border-radius: 0;
    background-color: @theme_entry_bg;
    background-clip: border-box;

    border-color: transparent @theme_internal_border;
}

.spinbutton .button:hover {
    background-color: @theme_active_color;
    color: @theme_insensitive_bg;
    border-color: transparent @theme_active_color;
}

.spinbutton .button:insensitive {
    color: @theme_insensitive_color;
    background-color: @theme_insensitive_bg;
    border-color: transparent @theme_insensitive_border;
}

.spinbutton .button:focus {
    border-color: @theme_highlight_color;
}

.spinbutton .button:first-child,
.spinbutton .button:last-child {
    border-color: transparent;
}

.spinbutton .button:first-child:focus {
    border-color: @theme_highlight_color;
    border-right-color: transparent;
}

.spinbutton .button:last-child:focus {
    border-color: @theme_highlight_color;
    border-left-color: transparent;
}

.spinbutton .button:first-child {
    border-radius: 2px 0 0 2px;
}

.spinbutton .button:last-child {
    border-radius: 0 2px 2px 0;
}

/*********
 * Menus *
 *********/
.menu {
    border-style: solid;
    border-color: @theme_fg_color;
    border-width: 1px;

    color: @theme_fg_color;
}

.menuitem {
    color: @theme_fg_color;
    background-color: transparent;
}

.menuitem:insensitive {
    color: @theme_button_insensitive_fg;
}

.menuitem:hover {
    color: @theme_base_color;
    background-color: @theme_active_color;
}

.menu .menuitem {
    padding: 4px;
}

.menubar .menuitem {
    padding: 3px 5px;
}

.menuitem.separator {
    -GtkMenuItem-horizontal-padding: 0;
}

/************
 * Toolbars *
 ************/
.toolbar {
    padding: 4px;
    border-width: 1px 0;
    border-style: solid;
    border-color: @theme_border_color;

    background-color: @theme_base_color;
}

.toolbar .button {
    background-color: transparent;
    padding: 1px;
}

.toolbar .button.text-button {
    padding: 2px 16px;
}

.toolbar .button.image-button {
    padding: 5px;
}

.toolbar .button:insensitive {
    background-color: @theme_base_color;
}

.primary-toolbar .button:insensitive {
    background-color: transparent;
    color: @theme_insensitive_color ;
}

.raised .button,
.raised.button {
    background-color: @theme_button_bg;
}

.raised .button:insensitive,
.raised.button:insensitive {
    border-color: @theme_button_insensitive_border;
    background-color: @theme_button_insensitive_bg;
    color: @theme_button_insensitive_fg;
}

.raised .button:active,
.raised.button:active,
.primary-toolbar .button:active,
.toolbar .button:active,
.raised .button:checked,
.raised.button:checked,
.primary-toolbar .button:checked,
.toolbar .button:checked {
    background-color: @theme_button_active_bg;
    border-color: @theme_button_active_border;
}

.raised .button:hover,
.raised.button:hover,
.primary-toolbar .button:hover,
.toolbar .button:hover {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

.raised .button:active:insensitive,
.raised.button:active:insensitive,
.primary-toolbar .button:active:insensitive,
.toolbar .button:active:insensitive,
.raised .button:checked:insensitive,
.raised.button:checked:insensitive,
.primary-toolbar .button:checked:insensitive,
.toolbar .button:checked:insensitive {
    border-color: @theme_button_insensitive_active_bg;
    background-color: @theme_button_insensitive_active_bg;

    color: @theme_base_color;
}

/*******************
 * Inline toolbars *
 *******************/
.inline-toolbar {
    border-width: 0 1px 1px;
    -GtkToolbar-button-relief: normal;
}

.inline-toolbar:last-child {
    border-radius: 0 0 3px 3px;
}

.inline-toolbar .button {
    color: @theme_inline_toolbar_button_fg;
    background-color: @theme_inline_toolbar_button_bg;

    border-radius: 0;
    border-width: 1px 0;
    border-color: @theme_button_linked_border;
    box-shadow: inset -1px 0 @theme_inline_toolbar_button_side;
}

.inline-toolbar .button:hover {
    color: @theme_base_color;
    border-color: @theme_button_linked_border;
    box-shadow: none;
}

.inline-toolbar .button:active,
.inline-toolbar .button:checked {
    color: @theme_base_color;
    border-color: @theme_button_linked_border;
}

.inline-toolbar .button:insensitive {
    border-color: @theme_button_linked_border;

    background-color: @theme_button_linked_insensitive_bg;
    color: @theme_button_linked_insensitive_fg;
}

.inline-toolbar .button:insensitive:active,
.inline-toolbar .button:insensitive:checked {
    border-color: @theme_button_linked_border;
}

.inline-toolbar .button:first-child,
.inline-toolbar GtkToolButton:first-child .button {
    border-radius: 3px 0 0 3px;
    border-left-width: 1px;
}

.inline-toolbar .button:last-child,
.inline-toolbar GtkToolButton:last-child .button {
    border-radius: 0 3px 3px 0;
    border-right-width: 1px;
    box-shadow: none;
}

.primary-toolbar.toolbar,
.primary-toolbar .toolbar,
.menubar.toolbar {
    -GtkToolbar-button-relief: normal;
}

.primary-toolbar.toolbar,
.primary-toolbar .toolbar,
.menubar {
    -GtkWidget-window-dragging: true;
}

.primary-toolbar .button {
    border-color: transparent;
}

.primary-toolbar .button.raised,
.primary-toolbar .raised .button {
    border-color: @theme_button_fg;
}

/******************
 * Linked buttons *
 ******************/

.button,
.button.menuitem.menubar,
GtkColorButton.button,
GtkComboBox.combobox-entry .button {
	padding: 4px;
}

.button.image-button,
.primary-toolbar.toolbar .button.image-button {
	padding: 4px;
}
/* ... */

